--- a/index.html
+++ b/index.html
@@ -1,11 +1,110 @@
-<!DOCTYPE html>
-<html>
-<body>
 
-<h1>My First Heading</h1>
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<title>Sihong Xie's Homepage</title>
+<link rel="stylesheet" type="text/css" href="files/default.css">
+</head>
 
-<p>My first paragraph.</p>
+<body bgcolor="#ccccff">
+	<table>
+		<tbody><tr valign='top'>
 
+	<td id="layout-menu">
+		<div class="menu-category">Main</div>
+		<div class="menu-item"><a href="index.html">Home</a></div>
+		<div class="menu-item"><a href="projects.html">Research</a></div>
+		<div class="menu-item"><a href="group.html">Group</a></div>
+		<div class="menu-item"><a href="teaching.html">Teaching</a></div>
+		<div class="menu-item"><a href="services.html">Services</a></div>
+		<div class="menu-item"><a href="CV_SihongXie_Apr_2022.pdf">CV</a></div>
+		<div class="menu-item"><a href="reading.html">Reading</a></div>
+		<div class="menu-item"><a href="codes.html">Codes and Data</a></div>
+		<div class="menu-category">Misc.</div>
+		<div class="menu-item"><a href="http://cs.lehigh.edu/">CSE department</a></div>
+		<div class="menu-item"><a href="courses.html">Interesting Courses</a></div>
+	</td>
+
+
+	<td id="layout-content">
+		<div id="toptitle">
+			<h1>Sihong Xie</h1>
+		</div>
+		<h2> Contact </h2>
+		<table>
+			<tr>
+				<td>
+		<font color="#595959" font-family="Palatino">
+			Room 326, Building C, Mountaintop Campus<br>
+			Computer Science and Engineering Department,<br>
+			Lehigh University,<br>
+			Bethlehem, PA 18015<br>
+		Email: &lt;lastname&gt;&lt;firstname&gt;1@gmail.com
+		</font>
+				</td>
+				<!--<td>
+					<img src="img/profile_600x600.jpg">
+				</td>-->
+		</tr>
+		</table>
+		<h2>Bio</h2>
+		<p>
+		<font color="#595959" font-family="Palatino">
+			I am an Associate Professor,
+			and was an Assistant Professor from 2016 Aug - 2023 May.<br>
+		I obtained my PhD (2010-2016) from the <a href='http://cs.uic.edu'>Department of Computer Science</a> at 
+		the <a href='http://uic.edu'>University of Illinois at Chicago</a> under the supervision of <a href="http://bdsc.lab.uic.edu/people.html">Prof.Philip S. Yu</a>.<br>
+		I received my Bachelor's and Master's degrees from the <a href='http://ss.sysu.edu.cn/english/'>School of Software Engineering</a>
+		at <a href='http://sysu.edu.cn'>Sun Yat-Sen University</a> in 2004 and 2008, respectively.
+		<br>
+		</font>
+		
+		<!--
+		<p style="font-size:13px">
+		<b>
+		<font color="#595959" font-family="Palatino">
+			One funded PhD position is available.</b>
+			<i>students with a quantitative background <b>(CS, MATH or STAT)</b>
+			who are interested in data mining and machine learning shall contact me via email (with
+			subject [PhD Application]_&lt;semester&gt;_&lt;area&gt;_&lt;school name&gt;).<br>
+			<b>Official applications </b>start from
+			<a href="http://www.cse.lehigh.edu/admissions/graduate-admissions">here</a>.<br>
+			<b>Synopses of my research areas </b>can be found <a href="research.html">here</a>.
+			</i>
+		</font>
+		</p>
+		-->
+		<h2>News</h2>
+		<p>
+		<font color="#595959" font-family="Palatino">
+			May 19, 2023: I was promoted to Associate Professor with tenure. Thanks to all those who helped me on my way to tenure!</br>
+			Apr 4, 2022: I received the 2022 NSF <span style="color:#4AEAB6">CAREER</span> award (NSF IIS-<a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2145922&HistoricalAwards=false'>2145922</a>). News release <a href='https://engineering.lehigh.edu/news/article/sihong-xie-pulling-back-curtain-intelligence-behind-ai'>1</a> <a href='https://www.eurekalert.org/news-releases/952387'>2</a>. </em> Thanks NSF and collaborators! </br>
+			Dec 14, 2021: An undergraduate capstone project on interpretable fake review detection </br>
+					&emsp;&emsp; &emsp; &emsp; &emsp; won the first place in the presentation competition.
+					<a href="paper/2021_capstone_team.JPG">Photo</a> and <a href="paper/2021_capstone_slides.pdf">slides</a>.</br>
+			Dec 9, 2021: A joint grant on Mathematical Optimization and Data Science is awarded by <a href="https://research.cc.lehigh.edu/researchfutures">Research Futures</a>.</br>
+			Dec 7, 2021: Invited to give a talk on fairness in machine learning to kids attending <a href="https://www.leapacademycharter.org/">LEAP Academy</a>. </br>
+			Nov 19, 2021: Invited to give a talk on robust misinformation detection for e-commerce at <a href="https://about.facebook.com/meta/">Meta</a> (<a href='paper/2021_spam_slides.pdf'>slides</a>).</br>
+			Oct 20, 2021: Gave a talk on Interpretable and Fair ML on graphs at <a href="https://www.cs.iastate.edu/">CS@IowaState</a>
+			(<a href="https://www.cs.iastate.edu/colloquia-sihong-xie-transparent-and-fair-machine-learning-graphs-humans">abstract</a>  and <a href="paper/human_ml_graph_talk_2021.pdf">slides</a>).</br>
+			Sep 1, 2021: Will serve as a Senior PC of <a href="https://aaai.org/Conferences/AAAI-22/">AAAI 2022</a>. </br>
+			Aug 31, 2021: Three papers on Interpretable ML on graphs and structural crowdsourcing are accepted to <a href="https://icdm2021.auckland.ac.nz/">ICDM 2021</a>. </br>
+			Aug 8, 2021: A paper on Fair ML on graphs is accepted to <a href="https://www.cikm2021.org/">CIKM 2021</a>. </br>
+			May 1, 2021: KDD 2021 Workshop Call for paper: <a href="https://www.microsoft.com/en-us/research/event/kdd-2021-truefact-workshop-making-a-credible-web-for-tomorrow/">TrueFact 2021</a>.</br>
+			Sep 3, 2020: A grant (NSF IIS-2008155) is awarded. Thanks NSF and collaborators! </br>
+			Aug 8, 2020: Two papers accepted to CIKM 2020.</br>
+			May 1, 2020: KDD 2020 Workshop Call for paper (due May 20): <a href="https://truthdiscoverykdd2020.github.io/">TrueFact 2020</a>.</br>
+			Dec 6, 2019: A joint grant on Efficient, Explainable and Robust Data Scientific Methods for Smart Engineering Systems <br>
+			             &emsp;&emsp; &emsp; &emsp; &emsp; is awarded by the <a href="https://research.cc.lehigh.edu/sites/research.cc.lehigh.edu/files/documents/VPRO/Accelerator%20Award%20History.pdf">Accelerator</a> program.</br>
+			Sep 12, 2019: A grant (NSF CNS-1931042) is awarded. Thanks NSF and collaborators! </br>
+		</font>
+		</p>
+	</td>
+
+
+</tr>
+</tbody>
+</table>
 </body>
 </html>
+
 
