--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <title>Sihong Xie's Homepage</title>
 <link rel="stylesheet" type="text/css" href="files/default.css">
+
+
+<style type="text/css">
+.img {
+position: absolute;
+}
+.hover_img {
+position: absolute;
+top: 0;
+left: 0;
+display: none;
+}
+.img:hover .hover_img {
+display: inline;
+}
+.padding-table-columns td
+{
+    padding:0 5px 0 0; /* Only right padding*/
+}
+</style>
+
 </head>
 
 <body bgcolor="#ccccff">
@@ -28,33 +49,41 @@
 		<div id="toptitle">
 			<h1>Sihong Xie</h1>
 		</div>
-		<h2> Contact </h2>
+		<!--<h2> Contact </h2>-->
 		<table>
 			<tr>
+				<td style="padding:0 30px 0 0;">
+					<div>
+						<img src="img/2023_head.jpg" width='120'>
+						<img src="img/profile.jpg" width='120' class="hover_img">
+					</div>
+				</td>
 				<td>
 		<font color="#595959" font-family="Palatino">
-			Room 326, Building C, Mountaintop Campus<br>
-			Computer Science and Engineering Department,<br>
-			Lehigh University,<br>
-			Bethlehem, PA 18015<br>
-		Email: &lt;lastname&gt;&lt;firstname&gt;1@gmail.com
+			Associate Professor<br>
+			AI Thrust, Information Hub<br><br>
+			Room E4-306, <a href="https://www.hkust-gz.edu.cn/about/">HKUST(GZ)</a><br>
+			Nansha, Guangzhou, Guangdong, China <a href="img/hkust-gz-location.jpg"><img src="img/map-maker.png" width="18px"></a><br><br>
+		Email: &lt;lastname&gt;&lt;firstname&gt;1@gmail.com<br>
+		or &lt;firstname&gt;&lt;lastname&gt;@hkust-gz.edu.cn<br>
 		</font>
 				</td>
-				<!--<td>
-					<img src="img/profile_600x600.jpg">
-				</td>-->
+				
 		</tr>
 		</table>
 		<h2>Bio</h2>
 		<p>
 		<font color="#595959" font-family="Palatino">
-			I am an Associate Professor,
-			and was an Assistant Professor from 2016 Aug - 2023 May.<br>
+			Before joining HKUST-GZ, I was an Assistant Professor from 2016 Aug - 2023 May,
+			and then a tenured Associate Professor in 2023 May<br>
+			at the Computer Science and Engineering Department
+			at Lehigh University, Pennsylvania, USA.<br>
 		I obtained my PhD (2010-2016) from the <a href='http://cs.uic.edu'>Department of Computer Science</a> at 
-		the <a href='http://uic.edu'>University of Illinois at Chicago</a> under the supervision of <a href="http://bdsc.lab.uic.edu/people.html">Prof.Philip S. Yu</a>.<br>
+		<a href='http://uic.edu'>University of Illinois at Chicago</a>, under the supervision of <a href="http://bdsc.lab.uic.edu/people.html">Prof.Philip S. Yu</a>.<br>
 		I received my Bachelor's and Master's degrees from the <a href='http://ss.sysu.edu.cn/english/'>School of Software Engineering</a>
 		at <a href='http://sysu.edu.cn'>Sun Yat-Sen University</a> in 2004 and 2008, respectively.
 		<br>
+		I am an NSF CAREER awardee (2022).
 		</font>
 		
 		<!--
