--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Sihong Xie's Homepage</title>
 <link rel="stylesheet" type="text/css" href="files/default.css">
 
-
+<!--
 <style type="text/css">
 .img {
 position: absolute;
@@ -22,7 +22,7 @@ display: inline;
     padding:0 5px 0 0; /* Only right padding*/
 }
 </style>
-
+-->
 </head>
 
 <body bgcolor="#ccccff">
@@ -55,7 +55,7 @@ display: inline;
 				<td style="padding:0 30px 0 0;">
 					<div>
 						<img src="img/2023_head.jpg" width='120'>
-						<img src="img/profile.jpg" width='120' class="hover_img">
+						<!--<img src="img/profile.jpg" width='120' class="hover_img">-->
 					</div>
 				</td>
 				<td>
