--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ display: inline;
 			<tr>
 				<td style="padding:0 30px 0 0;">
 					<div>
-						<img src="img/2023_head.jpg" width='120'>
+						<img src="img/2023_head.JPG" width='120'>
 						<!--<img src="img/profile.jpg" width='120' class="hover_img">-->
 					</div>
 				</td>
