--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@ display: inline;
 	<td id="layout-menu">
 		<div class="menu-category">Main</div>
 		<div class="menu-item"><a href="index.html">Home</a></div>
-		<div class="menu-item"><a href="projects.html">Research</a></div>
 		<div class="menu-item"><a href="group.html">Group</a></div>
+		<div class="menu-item"><a href="publications.html">Publications</a></div>
+		<div class="menu-item"><a href="projects.html">Research</a></div>
 		<div class="menu-item"><a href="teaching.html">Teaching</a></div>
 		<div class="menu-item"><a href="services.html">Services</a></div>
-		<div class="menu-item"><a href="CV_SihongXie_Apr_2022.pdf">CV</a></div>
 		<div class="menu-item"><a href="reading.html">Reading</a></div>
-		<div class="menu-item"><a href="codes.html">Codes and Data</a></div>
+		<!--<div class="menu-item"><a href="codes.html">Codes and Data</a></div>
 		<div class="menu-category">Misc.</div>
 		<div class="menu-item"><a href="http://cs.lehigh.edu/">CSE department</a></div>
 		<div class="menu-item"><a href="courses.html">Interesting Courses</a></div>
+		-->
 	</td>
 
 
@@ -54,18 +55,19 @@ display: inline;
 			<tr>
 				<td style="padding:0 30px 0 0;">
 					<div>
-						<img src="img/2023_head.JPG" width='120'>
+						<img src="img/2023_head.JPG" width='125'>
 						<!--<img src="img/profile.jpg" width='120' class="hover_img">-->
 					</div>
 				</td>
 				<td>
 		<font color="#595959" font-family="Palatino">
-			Associate Professor<br>
+			Associate Professor <br>
 			AI Thrust, Information Hub<br><br>
 			Room E4-306, <a href="https://www.hkust-gz.edu.cn/about/">HKUST(GZ)</a><br>
 			Nansha, Guangzhou, Guangdong, China <a href="img/hkust-gz-location.jpg"><img src="img/map-maker.png" width="18px"></a><br><br>
 		Email: &lt;lastname&gt;&lt;firstname&gt;1@gmail.com<br>
-		or &lt;firstname&gt;&lt;lastname&gt;@hkust-gz.edu.cn<br>
+		or &lt;firstname&gt;&lt;lastname&gt;@hkust-gz.edu.cn<br><br>
+		<a href="CV_SihongXie_Apr_2022.pdf">CV</a> (last updated Aug 20, 2023).
 		</font>
 				</td>
 				
