--- a/publications.html
+++ b/publications.html
@@ -11,21 +11,22 @@
 	<td id="layout-menu">
 		<div class="menu-category">Main</div>
 		<div class="menu-item"><a href="index.html">Home</a></div>
-		<div class="menu-item"><a href="projects.html">Research</a></div>
 		<div class="menu-item"><a href="group.html">Group</a></div>
+		<div class="menu-item"><a href="publications.html">Publications</a></div>
+		<div class="menu-item"><a href="projects.html">Research</a></div>
 		<div class="menu-item"><a href="teaching.html">Teaching</a></div>
 		<div class="menu-item"><a href="services.html">Services</a></div>
 		<div class="menu-item"><a href="reading.html">Reading</a></div>
-		<div class="menu-item"><a href="codes.html">Codes and Data</a></div>
-		<div class="menu-item"><a href="cv.pdf">CV</a></div>
+		<!--<div class="menu-item"><a href="codes.html">Codes and Data</a></div>
 		<div class="menu-category">Misc.</div>
 		<div class="menu-item"><a href="http://cs.lehigh.edu/">CSE department</a></div>
 		<div class="menu-item"><a href="courses.html">Interesting Courses</a></div>
+		-->
 	</td>
 
 
 		<td id="layout-content">
-<h2>Sihong Xie</h2>
+<h2>Publications</h2>
 <div  class='pubtype'>Preprints</div>
 <table border="0" width="100%">
 	<tbody>
