--- a/group.html
+++ b/group.html
@@ -52,7 +52,7 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Yazheng Liu</a>
+				<a href="https://yazhengliu.github.io">Yazheng Liu</a>
 				
 		</div></td>
 		<td width="85%">
