--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				KDD (2018-2022); SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022); SIGIR (2020-2023); 
+				KDD (2018-2022); SDM (2018-2022, 2024); ICDM (2017-2021); CIKM (2017-2022); SIGIR (2020-2023); 
 			</div>
 			<div class='author'>
 			</div>
@@ -58,7 +58,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				AAAI (2019-2022); IJCAI (2020, 2022); ICLR (2022); NeurIPS (2022-2023); ICML (2023).
+				AAAI (2019-2022); IJCAI (2020, 2022); ICLR (2022-2024); NeurIPS (2022-2023); ICML (2023).
 			</div>
 			<div class='author'>
 			</div>
