--- a/teaching.html
+++ b/teaching.html
@@ -29,14 +29,34 @@
 <h2>Teaching</h2>
 <div>
 <table border="0" width="160%">
+	<div class='area'>
+			HKUST-GZ, Guangzhou, China 
+	</div>
 	<tbody>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2016 Fall
+				2023 Fall 
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				<a href="teaching/2016_fall_tm/text_mining.html">CSE 398/498 Text Mining</a>
+					AIAA 5047 Responsible Artificial Intelligence  
+			</div>
+			<div class='author'>
+			</div>
+		</td>
+	</tr>
+	</tbody>
+	<div class='area'>
+			Lehigh University, PA, USA	
+	</div>
+	<tbody>
+	<tr>
+		<td width="20%"><div class='conf'>
+				Lehigh 2023 Spring 
+		</div></td>
+		<td width="80%">
+			<div class='title'>
+					CSE 325 Natural Language Processing
 			</div>
 			<div class='author'>
 			</div>
@@ -44,11 +64,11 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2017 Spring
+				Lehigh 2022 Fall
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				<a href="http://www.cse.lehigh.edu/cse-241">CSE 241 Database Systems</a>
+					CSE 326/426 Machine Learning
 			</div>
 			<div class='author'>
 			</div>
@@ -56,11 +76,10 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2017 Fall
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				<a href="teaching/2017_fall_nlp/nlp.html">CSE 398-013/498-013 Natural Language Processing</a>
+					CSE 241 Database Systems
 			</div>
 			<div class='author'>
 			</div>
@@ -68,11 +87,11 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2018 Spring
+				Lehigh 2022 Spring 
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				<a href="http://www.cse.lehigh.edu/cse-241">CSE 241 Database Systems</a>
+					CSE 325 Natural Language Processing
 			</div>
 			<div class='author'>
 			</div>
@@ -80,11 +99,11 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2018 Fall
+				Lehigh 2021 Fall
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				<a href="teaching/2018_fall_nlp/nlp.html">CSE 398-013/498-013 Natural Language Processing</a>
+					CSE 326/426 Machine Learning
 			</div>
 			<div class='author'>
 			</div>
@@ -92,11 +111,10 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2019 Spring
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				<a href="teaching/2019_spring_ml/">CSE 326-010/426-011 Machine Learning</a>
+					CSE 241 Database Systems
 			</div>
 			<div class='author'>
 			</div>
@@ -104,11 +122,23 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2019 Fall
+				Lehigh 2021 Spring 
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				<a href="teaching/2019_fall_nlp/nlp.html">CSE 398-013/498-013 Natural Language Processing</a>
+					CSE 325 Natural Language Processing
+			</div>
+			<div class='author'>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="20%"><div class='conf'>
+				Lehigh 2020 Fall
+		</div></td>
+		<td width="80%">
+			<div class='title'>
+				<a href="teaching/2019_spring_ml/">CSE 326/426 Machine Learning</a>
 			</div>
 			<div class='author'>
 			</div>
@@ -140,11 +170,11 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2020 Fall
+				Lehigh 2019 Fall
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				<a href="teaching/2019_spring_ml/">CSE 326-010/426-011 Machine Learning</a>
+				<a href="teaching/2019_fall_nlp/nlp.html">CSE 398/498 Natural Language Processing</a>
 			</div>
 			<div class='author'>
 			</div>
@@ -164,11 +194,11 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2021 Spring 
+				Lehigh 2019 Spring
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-					CSE 325 Natural Language Processing
+				<a href="teaching/2019_spring_ml/">CSE 326/426 Machine Learning</a>
 			</div>
 			<div class='author'>
 			</div>
@@ -176,11 +206,11 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Lehigh 2021 Fall
+				Lehigh 2018 Fall
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-					CSE 326/426 Machine Learning
+				<a href="teaching/2018_fall_nlp/nlp.html">CSE 398/498 Natural Language Processing</a>
 			</div>
 			<div class='author'>
 			</div>
@@ -188,10 +218,47 @@
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
+				Lehigh 2018 Spring
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-					CSE 241 Database Systems
+				<a href="http://www.cse.lehigh.edu/cse-241">CSE 241 Database Systems</a>
+			</div>
+			<div class='author'>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="20%"><div class='conf'>
+				Lehigh 2017 Fall
+		</div></td>
+		<td width="80%">
+			<div class='title'>
+				<a href="teaching/2017_fall_nlp/nlp.html">CSE 398/498 Natural Language Processing</a>
+			</div>
+			<div class='author'>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="20%"><div class='conf'>
+				Lehigh 2017 Spring
+		</div></td>
+		<td width="80%">
+			<div class='title'>
+				<a href="http://www.cse.lehigh.edu/cse-241">CSE 241 Database Systems</a>
+			</div>
+			<div class='author'>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="20%"><div class='conf'>
+				Lehigh 2016 Fall
+		</div></td>
+		<td width="80%">
+			<div class='title'>
+				<a href="teaching/2016_fall_tm/text_mining.html">CSE 398/498 Text Mining</a>
 			</div>
 			<div class='author'>
 			</div>
