--- a/group.html
+++ b/group.html
@@ -16,8 +16,9 @@
 		<div class="menu-item"><a href="projects.html">Research</a></div>
 		<div class="menu-item"><a href="teaching.html">Teaching</a></div>
 		<div class="menu-item"><a href="services.html">Services</a></div>
+		<!--
 		<div class="menu-item"><a href="reading.html">Reading</a></div>
-		<!--<div class="menu-item"><a href="codes.html">Codes and Data</a></div>
+	    <div class="menu-item"><a href="codes.html">Codes and Data</a></div>
 		<div class="menu-category">Misc.</div>
 		<div class="menu-item"><a href="http://cs.lehigh.edu/">CSE department</a></div>
 		<div class="menu-item"><a href="courses.html">Interesting Courses</a></div>
@@ -541,7 +542,6 @@
 			</div>
 		</td>
 	</tr>
-</tbody>
 </table>
 
 	
