--- a/services.html
+++ b/services.html
@@ -11,16 +11,18 @@
 	<td id="layout-menu">
 		<div class="menu-category">Main</div>
 		<div class="menu-item"><a href="index.html">Home</a></div>
-		<div class="menu-item"><a href="projects.html">Research</a></div>
 		<div class="menu-item"><a href="group.html">Group</a></div>
+		<div class="menu-item"><a href="publications.html">Publications</a></div>
+		<div class="menu-item"><a href="projects.html">Research</a></div>
 		<div class="menu-item"><a href="teaching.html">Teaching</a></div>
 		<div class="menu-item"><a href="services.html">Services</a></div>
-		<div class="menu-item"><a href="CV_SihongXie_Apr_2022.pdf">CV</a></div>
+		<!--
 		<div class="menu-item"><a href="reading.html">Reading</a></div>
-		<div class="menu-item"><a href="codes.html">Codes and Data</a></div>
+	    <div class="menu-item"><a href="codes.html">Codes and Data</a></div>
 		<div class="menu-category">Misc.</div>
 		<div class="menu-item"><a href="http://cs.lehigh.edu/">CSE department</a></div>
 		<div class="menu-item"><a href="courses.html">Interesting Courses</a></div>
+		-->
 	</td>
 
 
