--- a/publications.html
+++ b/publications.html
@@ -52,6 +52,60 @@
 	</tr>
 	<tr>
 		<td class='conf'>
+			 	ICML 2023
+		</td>
+		<td>
+			<div class='title'>
+				<a name="icml2023ws">Robust Ranking Explanations</a>
+				<div class='author'>
+					Chao Chen, Chenghua Guo, Guixiang Ma, Ming Zeng, Xi Zhang, Sihong Xie
+				</div>
+				<div>
+					3rd Workshop on Interpretable Machine Learning in Healthcare (IMLH)
+					<a class='pdflink' href='paper/icml2023ws.bib'>[bib]</a>
+					<a class='pdflink' href='https://openreview.net/forum?id=kyLjxxGDtd'>[paper]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td class='conf'>
+			 	KDD 2023
+		</td>
+		<td>
+			<div class='title'>
+				<a name="kdd2023ws_1">Reaction-Diffusion Graph Ordinary Differential Equation Networks: Traffic-Law-Informed Speed Prediction under Mismatched Data</a>
+				<div class='author'>
+					Yue Sun, Chao Chen, Yuesheng Xu, Sihong Xie, Rick S. Blum and Parv Venkitasubramaniam
+				</div>
+				<div>
+					The 12th International Workshop on Urban Computing
+					<a class='pdflink' href='paper/kdd2023ws_1.bib'>[bib]</a>
+					<a class='pdflink' href='http://urban-computing.com/urbcomp2023/file/UrbComp2023_paper_6.pdf'>[paper]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td class='conf'>
+			 	KDD 2023
+		</td>
+		<td>
+			<div class='title'>
+				<a name="kdd2023ws_2">Are Your Reviewers Being Treated Equally? Discovering Subgroup Structures to Improve Fairness in Spam Detection</a>
+				<div class='author'>
+					Sihong Xie Jiaxin Liu, Yuefei Lyu, Xi Zhang
+				</div>
+				<div>
+					2nd ACM SIGKDD Workshop on Ethical Artificial Intelligence: Methods and Applications
+					<a class='pdflink' href='paper/kdd2023ws_2.bib'>[bib]</a>
+					<a class='pdflink' href=''>[paper]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td class='conf'>
 			 	ICLR 2023
 		</td>
 		<td>
