--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				AAAI (2022)	
+				AAAI (2022); SDM (2024)	
 			</div>
 			<div class='author'>
 			</div>
@@ -49,7 +49,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				KDD (2018-2022); SDM (2018-2022, 2024); ICDM (2017-2021); CIKM (2017-2022); SIGIR (2020-2023); 
+				KDD (2018-2022); WWW (2024); SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022); SIGIR (2020-2023); 
 			</div>
 			<div class='author'>
 			</div>
